export interface CrudTimes {
  createdAt: Date;
  updatedAt?: Date;
}
